<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1">

        <TextView
            android:id="@+id/reset_my_password"
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"

            android:clickable="true"
            android:gravity="center"

            android:minHeight="48dp"
            android:text="@string/reset_your_password"
            android:textSize="20sp"
            android:focusable="true" />

        <EditText
            android:id="@+id/EditTextSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:hint="@string/enter_your_e_mail_here"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="#546E7A" />

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp"
            android:text="@string/ok" />

        <TextView
            android:id="@+id/btn_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:clickable="true"
            android:gravity="center"
            android:minHeight="48dp"
            android:onClick="NavigateSignUp"
            android:text="@string/signup"
            android:textSize="15sp"
            android:focusable="true" />
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>