<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_height="192dp"
        android:layout_width="match_parent">
    <com.google.android.material.appbar.CollapsingToolbarLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:toolbarId="@+id/toolbar"
        app:layout_scrollFlags="scroll|exitUntilCollapsed"
        app:contentScrim="?attr/colorPrimary">
    <ImageView
                android:id="@+id/update_imageView"
                android:layout_width="match_parent"
                android:layout_height="182dp"
                android:gravity="center_vertical"
                android:src="@drawable/defavatar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:foreground="@drawable/rounded_fg"
                tools:targetApi="m" />
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_height="?attr/actionBarSize"
                android:layout_width="match_parent">
            </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="200sp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/create_profile"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/TextViewName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name" />

            <EditText
                android:id="@+id/EditTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="enter_your_name"
                android:inputType="textPersonName|textCapSentences"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/TextViewSurName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/surname" />

            <EditText
                android:id="@+id/EditTextSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="enter_your_surname"
                android:inputType="textPersonName|textCapSentences"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/TextViewPhoneNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/phone_number" />

            <EditText
                android:id="@+id/EditTextPhoneNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="enter_your_phone_number"
                android:inputType="number"
                android:minHeight="48dp" />

            <TextView
                android:id="@+id/TextViewEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/e_mail" />

            <TextView
                android:id="@+id/textViewEmailAdress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="email_address"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnSaveButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/ok" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>